--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     계수 상한:
     <input id="maxCoeff" type="number" value="8" min="1" style="width:70px">
   </label>
-  <button onclick="balanceBrute()">균형 맞추기 (Brute Force)</button>
+  <button onclick="balanceBrute()">균형 맞추기</button>
 
   <div id="result" class="output"></div>
 
